--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
         <button id="search-button">Search</button>
       </div>
       <!-- <button><i class="fa-solid fa-cart-shopping"></i></button> -->
-      <a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="/">Go back</a>
     </nav>
     <div id="main"></div>
     <footer>
